deploy: 78df208edc0ba32f12411c6fed1a93339f620756

--- a/tutorials/print.html
+++ b/tutorials/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="index.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item "><a href="workflows/how_to_create_prototypes.html"><strong aria-hidden="true">2.</strong> How to create prototypes</a></li><li class="chapter-item "><a href="workflows/how_to_instantiate_prototypes.html"><strong aria-hidden="true">3.</strong> How to instantiate prototypes</a></li><li class="chapter-item "><a href="creation_graph/index.html"><strong aria-hidden="true">4.</strong> Creation Graph</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="creation_graph/custom_gpu_nodes.html"><strong aria-hidden="true">4.1.</strong> Creating custom GPU nodes</a></li><li class="chapter-item "><a href="creation_graph/custom_cpu_nodes.html"><strong aria-hidden="true">4.2.</strong> Creating custom CPU nodes</a></li><li class="chapter-item "><a href="creation_graph/from_code.html"><strong aria-hidden="true">4.3.</strong> Calling Creation Graphs from code</a></li><li class="chapter-item "><a href="creation_graph/raymarch_output_node.html"><strong aria-hidden="true">4.4.</strong> Creating a custom raymarching output node</a></li></ol></li><li class="chapter-item "><a href="post_processing/index.html"><strong aria-hidden="true">5.</strong> Post Processing</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="post_processing/aa.html"><strong aria-hidden="true">5.1.</strong> Anti-Aliasing</a></li><li class="chapter-item "><a href="post_processing/exposure.html"><strong aria-hidden="true">5.2.</strong> Exposure</a></li><li class="chapter-item "><a href="post_processing/color_grading.html"><strong aria-hidden="true">5.3.</strong> Color Grading</a></li></ol></li><li class="chapter-item "><a href="physics/index.html"><strong aria-hidden="true">6.</strong> Physics</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="physics/triggers.html"><strong aria-hidden="true">6.1.</strong> Triggers</a></li></ol></li><li class="chapter-item "><a href="the_truth/index.html"><strong aria-hidden="true">7.</strong> The Truth</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/index.html"><strong aria-hidden="true">7.1.</strong> Creating a custom asset</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/part1.html"><strong aria-hidden="true">7.1.1.</strong> Part 1 - Create an Asset Truth Type, Addable via Asset Browser</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part2.html"><strong aria-hidden="true">7.1.2.</strong> Part 2 - Custom UI</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part3.html"><strong aria-hidden="true">7.1.3.</strong> Part 3 - Custom Importer</a></li></ol></li><li class="chapter-item "><a href="the_truth/drag_and_drop.html"><strong aria-hidden="true">7.2.</strong> Adding Drag and Drop to Assets</a></li><li class="chapter-item "><a href="the_truth/open_asset.html"><strong aria-hidden="true">7.3.</strong> Open Asset in Tab</a></li></ol></li><li class="chapter-item "><a href="gameplay_coding/index.html"><strong aria-hidden="true">8.</strong> Gameplay Coding</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="gameplay_coding/extend_the_visual_scripting_language.html"><strong aria-hidden="true">8.1.</strong> Extending the Visual Scripting Language</a></li></ol></li><li class="chapter-item "><a href="ui/index.html"><strong aria-hidden="true">9.</strong> UI</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/index.html"><strong aria-hidden="true">9.1.</strong> Build Custom UI Controls</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/part1.html"><strong aria-hidden="true">9.1.1.</strong> Part 1</a></li></ol></li><li class="chapter-item "><a href="ui/toolbars-overlays.html"><strong aria-hidden="true">9.2.</strong> Toolbars and Overlays</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item "><a href="index.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item "><a href="workflows/how_to_create_prototypes.html"><strong aria-hidden="true">2.</strong> How to create prototypes</a></li><li class="chapter-item "><a href="workflows/how_to_instantiate_prototypes.html"><strong aria-hidden="true">3.</strong> How to instantiate prototypes</a></li><li class="chapter-item "><a href="creation_graph/index.html"><strong aria-hidden="true">4.</strong> Creation Graph</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="creation_graph/custom_gpu_nodes.html"><strong aria-hidden="true">4.1.</strong> Creating custom GPU nodes</a></li><li class="chapter-item "><a href="creation_graph/custom_cpu_nodes.html"><strong aria-hidden="true">4.2.</strong> Creating custom CPU nodes</a></li><li class="chapter-item "><a href="creation_graph/from_code.html"><strong aria-hidden="true">4.3.</strong> Calling Creation Graphs from code</a></li><li class="chapter-item "><a href="creation_graph/raymarch_output_node.html"><strong aria-hidden="true">4.4.</strong> Creating a custom raymarching output node</a></li></ol></li><li class="chapter-item "><a href="post_processing/index.html"><strong aria-hidden="true">5.</strong> Post Processing</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="post_processing/aa.html"><strong aria-hidden="true">5.1.</strong> Anti-Aliasing</a></li><li class="chapter-item "><a href="post_processing/exposure.html"><strong aria-hidden="true">5.2.</strong> Exposure</a></li><li class="chapter-item "><a href="post_processing/color_grading.html"><strong aria-hidden="true">5.3.</strong> Color Grading</a></li></ol></li><li class="chapter-item "><a href="physics/index.html"><strong aria-hidden="true">6.</strong> Physics</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="physics/triggers.html"><strong aria-hidden="true">6.1.</strong> Triggers</a></li></ol></li><li class="chapter-item "><a href="the_truth/index.html"><strong aria-hidden="true">7.</strong> The Truth</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/index.html"><strong aria-hidden="true">7.1.</strong> Creating a custom asset</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/part1.html"><strong aria-hidden="true">7.1.1.</strong> Part 1 - Create an Asset Truth Type, Addable via Asset Browser</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part2.html"><strong aria-hidden="true">7.1.2.</strong> Part 2 - Custom UI</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part3.html"><strong aria-hidden="true">7.1.3.</strong> Part 3 - Custom Importer</a></li></ol></li><li class="chapter-item "><a href="the_truth/drag_and_drop.html"><strong aria-hidden="true">7.2.</strong> Adding Drag and Drop to Assets</a></li><li class="chapter-item "><a href="the_truth/open_asset.html"><strong aria-hidden="true">7.3.</strong> Open Asset in Tab</a></li></ol></li><li class="chapter-item "><a href="gameplay_coding/index.html"><strong aria-hidden="true">8.</strong> Gameplay Coding</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="gameplay_coding/extend_the_visual_scripting_language.html"><strong aria-hidden="true">8.1.</strong> Extending the Visual Scripting Language</a></li></ol></li><li class="chapter-item "><a href="ui/index.html"><strong aria-hidden="true">9.</strong> UI</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/index.html"><strong aria-hidden="true">9.1.</strong> Build Custom UI Controls</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/part1.html"><strong aria-hidden="true">9.1.1.</strong> Part 1</a></li></ol></li><li class="chapter-item "><a href="ui/toolbars-overlays.html"><strong aria-hidden="true">9.2.</strong> Toolbars and Overlays</a></li><li class="chapter-item "><a href="ui/custom_layouts.html"><strong aria-hidden="true">9.3.</strong> Custom Tab Layouts</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -3995,6 +3995,86 @@ struct tm_toolbar_i *toolbars = 0;
 <p>Toolbars are generalized and they are not coupled to the docking system and the tabs, so you could use them within other contexts if you wish. </p>
 <h2 id="how-to-use-toolbars-outside-of-the-machinery-tabs"><a class="header" href="#how-to-use-toolbars-outside-of-the-machinery-tabs">How to use toolbars outside of The Machinery tabs</a></h2>
 <p>See the documentation under <code>How to use toolbars outside of The Machinery tabs</code> in <a href="https://ourmachinery.com/apidoc/plugins/ui/toolbar.h.html">toolbar.h</a>.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="creating-tab-layouts-through-code"><a class="header" href="#creating-tab-layouts-through-code">Creating tab layouts through code</a></h1>
+<p>The Machinery allows you to fully customize the editor layout. For personal layouts this system can be fully utilized without using code (see <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/the_editor/customizations">Interface Customizations</a> for more information), but you might want to create custom default layouts that get defined procedurally, this allows for more control when loading and saving the layout.</p>
+<p>Creating layouts in code can be done though the <code>tm_tab_layout_api</code>. Here various functions are available for tab management. In this tutorial we’ll go over how the default workspace is created using the <code>save_layout</code> function.</p>
+<p>In order to create a layout for The Machinery editor we need access to the editor settings. This is done through <a href="https://ourmachinery.com/apidoc/the_machinery/the_machinery.h.html#structtm_the_machinery_api">tm_the_machinery_api</a>. This tutorial uses the <code>tm_the_machinery_create_layout_i</code> interface in order to gain access to the settings. In these settings we have access to the window layouts, which is the subobject we want to append our layout to. The first things we should do however is check whether our layout already exists so we don’t create a new one every time on startup.</p>
+<pre><code class="language-c">static void create_layout(tm_application_o *app)
+{
+	TM_INIT_TEMP_ALLOCATOR(ta);
+
+	// Query the settings object and Truth from The Machinery API.
+	tm_tt_id_t app_settings_id;
+	tm_the_truth_o *tt = tm_the_machinery_api-&gt;settings(app, &amp;app_settings_id);
+	const tm_tt_id_t window_layouts_id = tm_the_truth_api-&gt;get_subobject(tt, tm_tt_read(tt, app_settings_id), TM_TT_PROP__APPLICATION_SETTINGS__WINDOW_LAYOUTS);
+
+	// Check whether our layout already exists.
+	const tm_tt_id_t *window_layouts = tm_the_truth_api-&gt;get_subobject_set(tt, tm_tt_read(tt, window_layouts_id), TM_TT_PROP__WINDOW_LAYOUTS__LAYOUTS, ta);
+	const uint32_t num_window_layouts = (uint32_t)tm_carray_size(window_layouts);
+	for (uint32_t i = 0; i &lt; num_window_layouts; ++i) {
+		const tm_strhash_t name_hash = tm_the_truth_api-&gt;get_string_hash(tt, tm_tt_read(tt, window_layouts[i]), TM_TT_PROP__WINDOW_LAYOUT__NAME);
+		if (TM_STRHASH_EQUAL(name_hash, TM_LAYOUT_NAME_HASH)) {
+			TM_SHUTDOWN_TEMP_ALLOCATOR(ta);
+			return;
+		}
+	}
+</code></pre>
+<p>After this we can start to define our actual tab layout. This is done through the <code>tm_tab_layout_t</code>. In this layout we can recursively define our tab layout with three distinct options per tabwell.</p>
+<ul>
+<li>We can split the tabwell horizontally, creating top and bottom child tabwells.</li>
+<li>We can split the tabwell vertically, creating left and right child tabwells.</li>
+<li>We can define (up to 3) tabs that should be in this tabwell.
+<img src="https://www.dropbox.com/s/ggiq4uv6htgwnpj/tm_tut_default_layout.png?dl=1" alt="" /></li>
+</ul>
+<pre><code class="language-c">tm_tab_layout_t tabs = {
+	.split = TM_TAB_LAYOUT_SPLIT_TYPE__HORIZONTAL,
+	.bias = 0.25f,
+	.top = &amp;(tm_tab_layout_t){
+		.split = TM_TAB_LAYOUT_SPLIT_TYPE__VERTICAL,
+		.bias = 0.67f,
+		.left = &amp;(tm_tab_layout_t){
+			.split = TM_TAB_LAYOUT_SPLIT_TYPE__VERTICAL,
+			.bias = -0.67f,
+			.right = &amp;(tm_tab_layout_t){ .tab = { TM_SCENE_TAB_VT_NAME_HASH } },
+			.left = &amp;(tm_tab_layout_t){ .tab = { TM_TREE_TAB_VT_NAME_HASH } },
+		},
+		.right = &amp;(tm_tab_layout_t){ .tab = { TM_PROPERTIES_TAB_VT_NAME_HASH } },
+	},
+	.bottom = &amp;(tm_tab_layout_t){
+		.split = TM_TAB_LAYOUT_SPLIT_TYPE__VERTICAL,
+		.bias = 0.5f,
+		.left = &amp;(tm_tab_layout_t){
+			.split = TM_TAB_LAYOUT_SPLIT_TYPE__VERTICAL,
+			.bias = -0.5f,
+			.right = &amp;(tm_tab_layout_t){ .tab = { TM_ASSET_BROWSER_TAB_VT_NAME_HASH } },
+			.left = &amp;(tm_tab_layout_t){ .tab = { TM_CONSOLE_TAB_VT_NAME_HASH } },
+		},
+		.right = &amp;(tm_tab_layout_t){ .tab = { TM_PREVIEW_TAB_VT_NAME_HASH } },
+	},
+};
+</code></pre>
+<p>Defining the tabs is relatively straight forward, you define them using their name hash. Splitting a tabwell horizontally or vertically however requires a <code>bias</code> parameter. This defines the ratio of both tabs. Zero means both tabs are of equal size, whereas 1 means that the primary tab (left or top) fully encompass the tabwell whilst the secondary tab (right or bottom) is hidden. Negative values allow you to use the secondary tab as if it was the primary tab.</p>
+<pre><code class="language-c">const tm_tt_id_t layout_id = tm_the_truth_api-&gt;create_object_of_hash(tt, TM_TT_TYPE_HASH__WINDOW_LAYOUT, TM_TT_NO_UNDO_SCOPE);
+tm_the_truth_object_o *layout_w = tm_the_truth_api-&gt;write(tt, layout_id);
+
+tm_the_truth_object_o *layouts_w = tm_the_truth_api-&gt;write(tt, window_layouts_id);
+tm_the_truth_api-&gt;add_to_subobject_set(tt, layouts_w, TM_TT_PROP__WINDOW_LAYOUTS__LAYOUTS, &amp;layout_w, 1);
+tm_the_truth_api-&gt;commit(tt, layouts_w, TM_TT_NO_UNDO_SCOPE);
+
+tm_the_truth_api-&gt;set_string(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__NAME, TM_LAYOUT_NAME);
+tm_the_truth_api-&gt;set_uint32_t(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__ICON, TM_UI_ICON__COLOR_WAND);
+tm_the_truth_api-&gt;set_float(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__WINDOW_X, 0.0f);
+tm_the_truth_api-&gt;set_float(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__WINDOW_Y, 0.0f);
+tm_the_truth_api-&gt;set_float(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__WINDOW_WIDTH, 1920.0f);
+tm_the_truth_api-&gt;set_float(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__WINDOW_HEIGHT, 1080.0f);
+
+const tm_tt_id_t tabwell_id = tm_tab_layout_api-&gt;save_layout(tt, &amp;layout, false, TM_TT_NO_UNDO_SCOPE);
+tm_the_truth_api-&gt;set_subobject_id(tt, layout_w, TM_TT_PROP__WINDOW_LAYOUT__TABWELL, tabwell_id, TM_TT_NO_UNDO_SCOPE);
+
+tm_the_truth_api-&gt;commit(tt, layout_w, TM_TT_NO_UNDO_SCOPE);
+TM_SHUTDOWN_TEMP_ALLOCATOR(ta);
+</code></pre>
+<p>Finally we can store our layout in the application settings. The top level object for this is the window layout. This specified the default position and size of the window if the user decides the instantiate the layout in a new window rather than as a workspace. </p>
 
                     </main>
 
